# SimpyLens

./: .gitignore  LICENSE  gui.py  main.py  monkey_patch.py  pyproject.toml  readme.md  simu.py  simu2.py  todo.md
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  tests.yml
docs/: api_reference.md  architecture.md  logging_schema.md
examples/: .basic_sim.simpy_layout.json  .cnc_sim.simpy_layout.json  .complex_sim.simpy_layout.json  .medium_sim.simpy_layout.json  .pottery_factory.lens.json  .queue_stress_sim.simpy_layout.json  .wafer_fabrication.simpy_layout.json  bank_renege.py  basic_sim.py  carwash.py  cnc_sim.py  complex_sim.py  gas_station_refueling.py  medium_sim.py  pottery_factory.py  queue_stress_sim.py  wafer_fabrication.py
src/simpy_visualizer/: __init__.py  gui.py  monkey_patch.py  sim_manager.py
src/simpylens/: __init__.py  breakpoint.py  gui.py  metrics_patch.py  monkey_patch.py  sim_manager.py  tracking_patch.py  viewer.py
tests/: test_headless.py  test_logs.py  test_metrics_patch.py  test_tracking_patch.py
