[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpylens"
version = "v0.1.7b1"
description = "SimPyLens: A low-intrusion GUI and debugger for Simpy simulations"
authors = [
    {name = "Samuel Oliveira Costa"},
    {email = "sam.oc2005@gmail.com"},
]
readme = "readme.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = [
    "simpy",
    "discrete-event simulation",
    "simulation debugging",
    "simulation visualization",
    "python simulation",
    "queueing simulation",
    "simpy debugger",
    "simpy visualization",
    "tkinter",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "simpy>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
"Repository" = "https://github.com/samuelc254/simpylens"
"Issues" = "https://github.com/samuelc254/simpylens/issues"
"Documentation" = "https://github.com/samuelc254/simpylens/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
simpylens = ["assets/*.png"]
